# msc-src

./: .gitmodules  BaseCaltech  BaseCorel  BaseImagens  BaseLeafsnap  BaseTropical  Makefile  Makefile~  README.md  acuracia_entropia_4.txt  acuracia_pca.txt  artificialGeneration.cpp  artificialGeneration.h  artificialGenerationTest.cpp  classifier.cpp  classifier.h  descritores.bkp  descritores.cpp  descritores.h  dimensionReduction.cpp  funcoesArquivo.cpp  funcoesArquivo.cppbak  funcoesArquivo.cppbkp  funcoesArquivo.h  funcoesAux.cpp  funcoesAux.h  mainDescritor  mainDescritor.cpp  matriz_confusao.py  mergeAll.sh  mergeDataSets.cpp  names_caltech600.txt  plot.py  quantization.cpp  quantization.h  rebalance.cpp  rebalance.h  rebalanceMultiClasses.cpp  rebalanceTest.cpp  rebalanceTest.h  (+22 more)
lpp/: CMakeLists.txt  lpp.cpp
lpp/projections/: LPP_100_caltech600_ALL_Gleam_16c_4d_100r.csv  LPP_100_caltech600_ALL_Gleam_32c_4d_100r.csv  LPP_100_caltech600_ALL_Gleam_8c_4d_100r.csv  LPP_100_caltech600_ALL_Intensity_16c_4d_100r.csv  LPP_100_caltech600_ALL_Intensity_32c_4d_100r.csv  LPP_100_caltech600_ALL_Intensity_64c_4d_100r.csv  LPP_100_caltech600_ALL_Intensity_8c_4d_100r.csv  LPP_100_caltech600_ALL_Luminance_16c_4d_100r.csv  LPP_100_caltech600_ALL_Luminance_32c_4d_100r.csv  LPP_100_caltech600_ALL_Luminance_8c_4d_100r.csv  LPP_100_caltech600_ALL_MSB_16c_4d_100r.csv  LPP_100_caltech600_ALL_MSB_8c_4d_100r.csv  LPP_100_corel_ALL_Gleam_16c_4d_100r.csv  LPP_100_corel_ALL_Gleam_8c_4d_100r.csv  LPP_100_corel_ALL_Intensity_16c_4d_100r.csv  LPP_100_corel_ALL_Intensity_32c_4d_100r.csv  (+134 more)
(+2047 files in other folders)
